Implement user creation

--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ services:
       - ./app:/opt/citheron
     environment:
       CITHERON_LOG_FILE: ./log/citheron.dev.log
-      CITHERON_DATABASE_HOST: localhost
+      CITHERON_DATABASE_HOST: db
       CITHERON_DATABASE_PORT: 5432
       CITHERON_DATABASE_DBNAME: citheron
       CITHERON_DATABASE_USER: postgres
